[package]
name = "api-request-utils-rs"
version = "0.2.1"
edition = "2021"
authors = ["Aarav Shah <aaravaditya51@gmail.com>"]
description = "This library aims to provide a straightforward and efficient solution for making api requests It is designed to be user-friendly, customizable, and extensible, allowing developers to easily integrate and interact with APIs in their Rust applications."
documentation = "https://docs.rs/api-request-utils-rs"
readme = "README.md"
repository = "https://github.com/Deaths-Door/api-request-utils-rs"
homepage = "https://github.com/Deaths-Door/api-request-utils-rs"
license = "MIT OR Apache-2.0"
keywords = ["api","https","utilities","request-utilities"]


[dependencies]
reqwest = "0.11"
async-trait = "0.1.68"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }